--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="HDFC Bank">
-    <link rel="apple-touch-icon" href="/icon.png">
+    
+    <!-- Icons with cache busting ?v=2 to force update -->
+    <link rel="icon" type="image/png" href="/icon.png?v=2">
+    <link rel="apple-touch-icon" href="/icon.png?v=2">
     <link rel="manifest" href="/manifest.json">
 
     <title>HDFC Bank</title>
