feat: Improve bill payment flow and transaction details
Enhance the bill payment user experience by introducing a confirmation step before navigating to the manual payment screen. This ensures users are aware of the bill details they are about to pay.

Additionally, refine the transaction history view to display "N/A" for missing category (MCC) and note information, providing a more robust display for all transaction types. PWA icon caching has also been adjusted for better compatibility.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="HDFC Bank">
     
-    <!-- Icons with cache busting ?v=2 to force update -->
-    <link rel="icon" type="image/png" href="/icon.png?v=2">
-    <link rel="apple-touch-icon" href="/icon.png?v=2">
+    <!-- Icons: Direct path to icon.png without query params for better iOS support -->
+    <link rel="icon" type="image/png" href="/icon.png">
+    <link rel="apple-touch-icon" href="/icon.png">
     <link rel="manifest" href="/manifest.json">
 
     <title>HDFC Bank</title>
