fix: Update PWA asset paths
Change absolute paths for PWA icons and manifest to relative paths. This ensures proper loading of these assets when the application is served from different root directories or contexts, improving PWA compatibility across various deployment scenarios.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="HDFC Bank">
     
-    <!-- Icons: Direct path to icon.png without query params for better iOS support -->
-    <link rel="icon" type="image/png" href="/icon.png">
-    <link rel="apple-touch-icon" href="/icon.png">
-    <link rel="manifest" href="/manifest.json">
+    <!-- Icons: Relative path to icon.png to ensure it loads from the root directory -->
+    <link rel="icon" type="image/png" href="icon.png">
+    <link rel="apple-touch-icon" href="icon.png">
+    <link rel="manifest" href="manifest.json">
 
     <title>HDFC Bank</title>
     <script src="https://cdn.tailwindcss.com"></script>
