--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     
     <!-- PWA Settings for iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="HDFC Bank">
     
-    <!-- Icons: Relative path to icon.png to ensure it loads from the root directory -->
-    <link rel="icon" type="image/png" href="icon.png">
-    <link rel="apple-touch-icon" href="icon.png">
-    <link rel="manifest" href="manifest.json">
+    <!-- Icons: Root-relative paths are required for stable PWA behavior -->
+    <link rel="icon" type="image/png" href="/icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/icon.png">
+    <link rel="apple-touch-icon-precomposed" href="/icon.png">
+    <link rel="manifest" href="/manifest.json">
 
     <title>HDFC Bank</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -24,6 +25,8 @@
         /* Handle safe areas for notches on iPhones */
         padding-top: env(safe-area-inset-top);
         padding-bottom: env(safe-area-inset-bottom);
+        /* Prevent bounce scroll on mobile */
+        overscroll-behavior-y: none;
       }
       /* Hide scrollbar for Chrome, Safari and Opera */
       .no-scrollbar::-webkit-scrollbar {
