fix: Update app icons and dependencies
Switches to using the App Store icon for PWA icons to ensure consistent visibility. Updates several dependencies, including `lucide-react` and `@google/genai`, and adjusts versioning for `html2canvas` and `jsqr`.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="HDFC Bank">
     
-    <!-- Icons: Root-relative paths are required for stable PWA behavior -->
-    <link rel="icon" type="image/png" href="/icon.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/icon.png">
-    <link rel="apple-touch-icon-precomposed" href="/icon.png">
+    <!-- Icons: Using hosted App Store icon for guaranteed visibility -->
+    <link rel="icon" type="image/jpeg" href="https://is1-ssl.mzstatic.com/image/thumb/Purple211/v4/a4/83/30/a4833010-062e-8367-176f-007f59d288d0/AppIcon-0-0-1x_U007emarketing-0-10-0-85-220.png/512x512bb.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://is1-ssl.mzstatic.com/image/thumb/Purple211/v4/a4/83/30/a4833010-062e-8367-176f-007f59d288d0/AppIcon-0-0-1x_U007emarketing-0-10-0-85-220.png/512x512bb.jpg">
+    <link rel="apple-touch-icon-precomposed" href="https://is1-ssl.mzstatic.com/image/thumb/Purple211/v4/a4/83/30/a4833010-062e-8367-176f-007f59d288d0/AppIcon-0-0-1x_U007emarketing-0-10-0-85-220.png/512x512bb.jpg">
     <link rel="manifest" href="/manifest.json">
 
     <title>HDFC Bank</title>
