--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="HDFC Bank">
     
-    <!-- Icons: Using hosted App Store icon for guaranteed visibility -->
-    <link rel="icon" type="image/jpeg" href="https://is1-ssl.mzstatic.com/image/thumb/Purple211/v4/a4/83/30/a4833010-062e-8367-176f-007f59d288d0/AppIcon-0-0-1x_U007emarketing-0-10-0-85-220.png/512x512bb.jpg">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://is1-ssl.mzstatic.com/image/thumb/Purple211/v4/a4/83/30/a4833010-062e-8367-176f-007f59d288d0/AppIcon-0-0-1x_U007emarketing-0-10-0-85-220.png/512x512bb.jpg">
-    <link rel="apple-touch-icon-precomposed" href="https://is1-ssl.mzstatic.com/image/thumb/Purple211/v4/a4/83/30/a4833010-062e-8367-176f-007f59d288d0/AppIcon-0-0-1x_U007emarketing-0-10-0-85-220.png/512x512bb.jpg">
+    <!-- Icons: Strict local path referencing -->
+    <link rel="icon" type="image/png" href="/icon.png?v=4">
+    <link rel="apple-touch-icon" href="/icon.png?v=4">
     <link rel="manifest" href="/manifest.json">
 
     <title>HDFC Bank</title>
@@ -41,15 +40,15 @@
   <script type="importmap">
 {
   "imports": {
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
+    "html2canvas": "https://aistudiocdn.com/html2canvas@^1.4.1",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.6",
-    "jsqr": "https://aistudiocdn.com/jsqr@^1.4.0",
     "react-webcam": "https://aistudiocdn.com/react-webcam@^7.2.0",
-    "html2canvas": "https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/+esm",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.1"
+    "jsqr": "https://aistudiocdn.com/jsqr@^1.4.0"
   }
 }
 </script>
