feat: Update PWA icon paths
Refactors PWA manifest and index.html to use standard relative paths for icons. This ensures icons are correctly loaded across different contexts and removes unnecessary cache-busting query parameters.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="HDFC Bank">
     
-    <!-- Icons: Strict local path referencing -->
-    <link rel="icon" type="image/png" href="/icon.png?v=4">
-    <link rel="apple-touch-icon" href="/icon.png?v=4">
-    <link rel="manifest" href="/manifest.json">
+    <!-- Icons: Standard relative paths with no query params -->
+    <link rel="icon" type="image/png" href="icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="icon.png">
+    <link rel="manifest" href="manifest.json">
 
     <title>HDFC Bank</title>
     <script src="https://cdn.tailwindcss.com"></script>
